Now the group and habit name fields are no longer too long.

--- a/data/app/css/edit.css
+++ b/data/app/css/edit.css
@@ -118,3 +118,8 @@ select {
     margin-bottom: auto;
     margin-top: auto;
 }
+
+#name_input {
+    margin: auto auto auto 0;
+    width: 25em;
+}
